media query and dark mode fix !important

--- a/style.css
+++ b/style.css
@@ -8,6 +8,69 @@ body {
     font-weight: bold;
 }
 
+@media only screen and (max-width: 600px) {
+    .container {
+      font-size: 14px;
+    }
+    .row {
+      flex-direction: column;
+    }
+    img {
+      src: url("./images/android-icon-144x144.png");
+    }
+    footer {
+        font-size: 16px;
+    }
+    .d-flex {
+        flex-direction: row;
+    }
+    .me-4 {
+        font-size: 14px;
+    }
+    .revealText {
+        margin-top: 50px !important;
+    }
+    .revealImage {
+        width: 80%;
+    }
+    #carouselExampleCaptions {
+        width: 95%;
+    }
+    .carousel-indicators{
+        display: none;
+    }
+    .carousel-caption{
+        font-size: 10px;
+        display: inline !important;
+        margin: 0;
+        padding: 0;
+    }
+}  
+
+@media only screen and (max-width: 380px) {
+    .container {
+      font-size: 12px;
+    }
+    .row {
+      flex-direction: column;
+    }
+    img {
+      src: url("./images/android-icon-96x96.png");
+    }
+    footer {
+        font-size: 14px;
+    }
+    .d-flex {
+        flex-direction: column;
+    }
+    .me-4 {
+        font-size: 12px;
+    }
+    .justify-content-center {
+        align-items: center;
+    }
+}
+
 .btn-custom {
     background-color: #57ad44;
     color: white;
@@ -102,7 +165,11 @@ body {
 }
 
 .navbar-nav .nav-link:hover {
-    color: #f0f0f0;
+    color: #aba9a9 !important;
+}
+
+.nav-link:focus {
+    color: #aba9a9;
 }
 
 body {
@@ -234,6 +301,13 @@ body {
 .revealText{
     text-align: center;
     margin: 15px;
+}
+
+.dark-mode .card-text {
+    color: white;
+}
+.card-text {
+    font-size: large;
 }
 
 /* video 
